# skillvault-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: SKILLVAULT-DESKTOP-PRD.md
src/: global.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/api/: auth.rs  client.rs  mod.rs  tests.rs
src-tauri/src/installer/: mod.rs  tests.rs
src-tauri/src/optimizer/: launch_script.rs  mod.rs  profile.rs  shell_profile.rs  terminal.rs
src-tauri/src/scanner/: agents.rs  codex.rs  codex_tests.rs  hooks.rs  mcp.rs  mod.rs  plugins.rs  rules.rs  skills.rs  statuslines.rs  teams.rs  tests.rs
src/components/: package-card.ts  sidebar.ts  toast.ts
src/lib/: api.ts  router.ts  state.ts  types.ts  utils.ts
src/styles/: base.css  components.css  tokens.css  views.css
src/views/: browse.ts  detail.ts  edit-package.ts  file-detail.ts  installed.ts  optimize.ts  plugin-detail.ts  plugins.ts  publish.ts  recent.ts  settings.ts  skill-detail.ts  trending.ts
