[package]
name = "skillvault-desktop"
version = "0.1.13"
edition = "2021"
description = "Desktop companion app for SkillVault"
license = "MIT"

[lib]
name = "skillvault_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "skillvault-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
notify = "7"
dirs = "6"
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
